Update images and solutions

--- a/index.html
+++ b/index.html
@@ -10,11 +10,21 @@
 </head>
 
 <body id="root">
-    <div class="flex flex-row min-h-screen overflow-hidden">
+
+    <div class="flex flex-col min-h-screen overflow-hidden md:flex-row">
         <div class="bg-gray-200 h-screen w-screen flex justify-center items-center">
             <div class="relative">
-                <img src="./src/assets/puzzle.jpeg" alt="puzzle">
-                <div class="absolute  text-2xl top-5 left-10 tracking-widest">كلمةجمييلة</div>
+                <img id="img-1" class="absolute hidden top-0 left-0" src="./src/assets/crossword/شاول.png">
+                <img id="img-2" class="absolute hidden top-0 left-0" src="./src/assets/crossword/موسى.png">
+                <img id="img-3" class="absolute hidden top-0 left-0" src="./src/assets/crossword/مارادونا.png">
+                <img id="img-4" class="absolute hidden top-0 left-0" src="./src/assets/crossword/زكا.png">
+                <img id="img-5" class="absolute hidden top-0 left-0" src="./src/assets/crossword/اريوس.png">
+                <img id="img-6" class="absolute hidden top-0 left-0" src="./src/assets/crossword/ميسى.png">
+                <img id="img-7" class="absolute hidden top-0 left-0" src="./src/assets/crossword/شمشون.png">
+                <img id="img-8" class="absolute hidden top-0 left-0" src="./src/assets/crossword/اثاناسيوس.png">
+
+                <!-- Just for size reference -->
+                <img class="opacity-0" src="./src/assets/crossword/ميسى.png">
             </div>
         </div>
         <div class="bg-gray-200 h-screen w-screen ">
