Added empty image for sizing

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <img id="img-8" class="absolute hidden top-0 left-0" src="./src/assets/crossword/اثاناسيوس.png">
 
                 <!-- Just for size reference -->
-                <img class="opacity-0" src="./src/assets/crossword/ميسى.png">
+                <img src="./src/assets/crossword/empty.png">
             </div>
         </div>
         <div class="bg-gray-200 h-screen w-screen ">
